# tasklist

./: .gitignore  Makefile  README.md  TESTING.md  package-lock.json  package.json  playwright-accessibility.config.js  playwright.config.js  pyproject.toml  pytest.ini  run_tests.sh  test.sh
accounts/: serializers.py  views.py
scripts/: run_tests.py
static/: index.html
static/css/: style.css
static/js/: app.js  tasks.js
tasklist_project/: asgi.py  settings.py  urls.py  wsgi.py
tasklist_project/settings/: test.py
tasklist_project/static/css/: style.css
tasklist_project/static/js/: auth.js
tasks/: serializers.py  urls.py  views.py
tasks/migrations/: 0001_initial.py
tests/: conftest.py  factories.py
tests/accessibility/: test_a11y.spec.js
tests/backend/: test_api_integration.py  test_models.py  test_serializers.py  test_views.py
tests/e2e/: user-journey.spec.js
tests/frontend/: auth.test.js  setup.js  tasks.test.js
tests/performance/: locustfile.py  test_performance.py
tests/security/: test_api_security.py  test_authentication_security.py
